not final console trycatching

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass> graphics.SetupGUI</mainClass>
+                            <mainClass>setup.SetupGUI</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
